# fp2020w

./: .gitignore  .gitmodules  Angabe1.hs  Angabe1.hs.out_1  Angabe1_TestSuite1.hs  Angabe2.hs  Angabe2.hs.out_2  Angabe2_TestSuite1.hs  Angabe3.lhs  Angabe3.lhs.out_1  Angabe3_TestSuite2.hs  Angabe4.lhs  Angabe4.lhs.out_1  Angabe4_TestSuite1.hs  Angabe4_TestSuite2.hs  Angabe5.hs  Angabe5.hs.out_1  Angabe5.hs.out_2  Angabe5_TestSuite2.hs  Angabe6.hs  Angabe6.hs.out_1  Angabe6.hs.out_2  Angabe6_TestSuite2.hs  Angabe7.hs  Angabe7.hs.out_2  Angabe7_TestSuite1.hs  cabal.project  fprog.cabal
TdT/: Angabe3.hs  Angabe_TdT.hs  Angabe_TdT.hs.out_1  Angabe_TdT.lhs  Angabe_TdT.lhs.out_2  Angabe_TdT_TestSuite2.hs
